Adding Pinned Tab Support
Moving files as well

--- a/firefox/popup/popup.html
+++ b/firefox/popup/popup.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+
 <html>
     <head>
         <meta charset="utf-8" />
@@ -16,10 +18,16 @@
         </style>
     </head>
     <body>
-        <h1>Show the Explainified Version of an xkcd comic</h1>
-        <h2>(select the button to get moved)</h2>
-        <button id="sendmessageid">Explainify</button>
+        <div id="popup-content">
+          <div class="button beast">Frog</div>
+          <div class="button beast">Turtle</div>
+          <div class="button beast">Snake</div>
+          <div class="button reset">Reset</div>
+        </div>
+        <div id="error-content" class="hidden">
+          <p>Can't beastify this web page.</p><p>Try a different page.</p>
+        </div>
         <script src="popup.js"></script>
-    </body>
+      </body>
 </html>
 
