--- a/chromium/popup/popup.html
+++ b/chromium/popup/popup.html
@@ -18,7 +18,9 @@
     <body>
         <h1>Show the Explainified Version of an xkcd comic</h1>
         <h2>(select the button to get moved)</h2>
-        <button id="sendmessageid">Explainify</button>
+        <br>
+        <button id="nopinexplain">Explainify</button>
+        <button id="pinexplain">Explainify and pin tab</button>
         <script src="popup.js"></script>
     </body>
 </html>
