--- a/chromium/popup/popup.html
+++ b/chromium/popup/popup.html
@@ -17,7 +17,7 @@
     </head>
     <body>
         <h1>Show the Explainified Version of an xkcd comic</h1>
-        <h2>(select the button to get moved)</h2>
+        <h2>(select one of the buttons to get moved)</h2>
         <br>
         <button id="nopinexplain">Explainify</button>
         <button id="pinexplain">Explainify and pin tab</button>
