--- a/firefox/popup/popup.html
+++ b/firefox/popup/popup.html
@@ -1,5 +1,3 @@
-<!DOCTYPE html>
-
 <html>
     <head>
         <meta charset="utf-8" />
@@ -18,16 +16,11 @@
         </style>
     </head>
     <body>
-        <div id="popup-content">
-          <div class="button beast">Frog</div>
-          <div class="button beast">Turtle</div>
-          <div class="button beast">Snake</div>
-          <div class="button reset">Reset</div>
-        </div>
-        <div id="error-content" class="hidden">
-          <p>Can't beastify this web page.</p><p>Try a different page.</p>
-        </div>
+        <h1>Show the Explainified Version of an xkcd comic</h1>
+        <h2>(select one of the buttons to get moved)</h2>
+        <br>
+        <button id="nopinexplain">Explainify</button>
+        <button id="pinexplain">Explainify and pin tab</button>
         <script src="popup.js"></script>
-      </body>
+    </body>
 </html>
-
